# Canoa

./: .gitignore  .vscode-ctags  CMakeLists.txt  README.md  main.cpp  third-party
CMake/: CanoaGoogleTest.cmake  GoogleTest.cmake
src/: CMakeLists.txt  Speed.cpp  Speed.h
src/commands/common/: Command.cpp  Command.h  Speed.cpp
src/commands/engine/: CoolantTemperature.cpp  CoolantTemperature.h  MassAirFlow.cpp  MassAirFlow.h  OilTemperature.cpp  OilTemperature.h  Rpm.cpp  Rpm.h  ThrottlePosition.cpp  ThrottlePosition.h
src/commands/factory/: CommandFactory.h
src/dispatcher/: AbstractCommandDispatcher.cpp  AbstractCommandDispatcher.h  Dispatcher.h  SpeedCommandDispatcher.cpp  SpeedCommandDispatcher.h
src/factory/: CommandFactory.cpp  CommandFactory.h
src/manager/: SerialPortManager.cpp  SerialPortManager.h
tests/: CMakeLists.txt
tests/commands/common/: CMakeLists.txt  SpeedTest.cpp
