include(GNUInstallDirs)

set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")

set(CANOA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(CANOA_COMMANDS_DIR "${CANOA_SRC_DIR}/commands")

set(CANOA_FACTORY_DIR "${CANOA_COMMANDS_DIR}/factory")
set(CANOA_COMMON_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/common")
set(CANOA_ENGINE_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/engine")

include_directories(
        "${CANOA_FACTORY_DIR}"
        "${CANOA_COMMON_COMMANDS_DIR}"
        "${CANOA_ENGINE_COMMANDS_DIR}")

file(GLOB CANOA_FACTORY_HEADERS "${CANOA_FACTORY_DIR}/*.h")
file(GLOB CANOA_FACTORY_SRCS "${CANOA_FACTORY_DIR}/*.cpp")
file(GLOB CANOA_COMMON_COMMANDS_HEADERS "${CANOA_COMMON_COMMANDS_DIR}/*.h")
file(GLOB CANOA_COMMON_COMMANDS_SRCS "${CANOA_COMMON_COMMANDS_DIR}/*.cpp")
file(GLOB CANOA_ENGINE_COMMANDS_HEADERS "${CANOA_ENGINE_COMMANDS_DIR}/*.h")
file(GLOB CANOA_ENGINE_COMMANDS_SRCS "${CANOA_ENGINE_COMMANDS_DIR}/*.cpp")

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(CANOA_INSTALL_PREFIX ${CANOA_ROOT_DIR}/output)
    set(PROJECT_DESTINATION_BIN_DIR ${CANOA_INSTALL_PREFIX}/bin)
    set(PROJECT_DESTINATION_LIB_DIR ${CANOA_INSTALL_PREFIX}/lib)
    set(PROJECT_DESTINATION_INCLUDE_DIR
            ${CANOA_INSTALL_PREFIX}/include/${PROJECT_NAME})
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    set(PROJECT_DESTINATION_LIB_DIR ${CMAKE_INSTALL_LIBDIR})
    set(PROJECT_DESTINATION_INCLUDE_DIR
            ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
endif ()

set(HEADERS
        ${CANOA_FACTORY_HEADERS}
        ${CANOA_COMMON_COMMANDS_HEADERS}
        ${CANOA_ENGINE_COMMANDS_HEADERS})

set(SRCS
        ${CANOA_FACTORY_SRCS}
        ${CANOA_COMMON_COMMANDS_SRCS}
        ${CANOA_ENGINE_COMMANDS_SRCS})

add_library(${LIBRARY_TARGET_NAME} SHARED ${SRCS})

install(TARGETS ${LIBRARY_TARGET_NAME}
        LIBRARY DESTINATION  ${PROJECT_DESTINATION_LIB_DIR})
install(FILES ${HEADERS} DESTINATION ${PROJECT_DESTINATION_INCLUDE_DIR})