include(GNUInstallDirs)

set(LIBRARY_TARGET_NAME ${PROJECT_NAME})

set(THREADS_HAVE_PTHREAD_ARG 1)
find_package(Threads REQUIRED)

find_package(PkgConfig)
pkg_check_modules(SERIAL libserial)

set(CANOA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
message(WARNING "Canoa sourcedir: " ${CANOA_SRC_DIR})

include_directories(
        ${CANOA_SRC_DIR}/factory
        ${CANOA_COMMANDS_ROOT_DIR}/common
        ${CANOA_COMMANDS_ROOT_DIR}/engine
        ${SERIAL_INCLUDE_DIRS})


file(GLOB CANOA_FACTORY_HEADERS ${CANOA_SRC_DIR}/factory/*.h)
file(GLOB CANOA_FACTORY_SRCS ${CANOA_SRC_DIR}/factory/*.cpp)
file(GLOB CANOA_COMMON_COMMANDS_HEADERS ${CANOA_COMMANDS_ROOT_DIR}/common/*.h)
file(GLOB CANOA_COMMON_COMMANDS_SRCS ${CANOA_COMMANDS_ROOT_DIR}/common/*.cpp)
file(GLOB CANOA_ENGINE_COMMANDS_HEADERS ${CANOA_COMMANDS_ROOT_DIR}/engine/*.h)
file(GLOB CANOA_ENGINE_COMMANDS_SRCS ${CANOA_COMMANDS_ROOT_DIR}/engine/*.cpp)

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(CANOA_INSTALL_PREFIX ${CANOA_ROOT_DIR}/output)
    set(PROJECT_DESTINATION_BIN_DIR ${CANOA_INSTALL_PREFIX}/bin)
    set(PROJECT_DESTINATION_LIB_DIR ${CANOA_INSTALL_PREFIX}/lib)
    set(PROJECT_DESTINATION_INCLUDE_DIR
            ${CANOA_INSTALL_PREFIX}/include/${PROJECT_NAME}/${CANOA_SRC_ROOT_DIR})
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    set(PROJECT_DESTINATION_LIB_DIR ${CMAKE_INSTALL_LIBDIR})
    set(PROJECT_DESTINATION_INCLUDE_DIR
            ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
endif ()

set(HEADERS
        ${CANOA_FACTORY_HEADERS}
        ${CANOA_COMMON_COMMANDS_HEADERS}
        ${CANOA_ENGINE_COMMANDS_HEADERS})

set(SRCS
        ${CANOA_FACTORY_SRCS}
        ${CANOA_COMMON_COMMANDS_SRCS}
        ${CANOA_ENGINE_COMMANDS_SRCS})

add_library(${LIBRARY_TARGET_NAME} SHARED ${SRCS})
target_link_directories(${LIBRARY_TARGET_NAME} PUBLIC ${LIBSERIAL_LIB_DIR})
target_link_libraries(${LIBRARY_TARGET_NAME} ${SERIAL_LDFLAGS} ${CMAKE_THREAD_LIBS_INIT})

install(TARGETS ${LIBRARY_TARGET_NAME}
        LIBRARY DESTINATION  ${PROJECT_DESTINATION_LIB_DIR})
if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
            DESTINATION ${CANOA_ROOT_DIR}/output/${CMAKE_INSTALL_INCLUDEDIR}
            FILES_MATCHING PATTERN "*.h")
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    install(FILES ${HEADERS} DESTINATION ${PROJECT_DESTINATION_INCLUDE_DIR})
endif ()
